# nbody

./: .gitignore  :w  Cargo.toml  Makefile  README.md  build.zig  main.c  shell.nix  test.c
libs/SDL2-2.0.20-dev/: LICENCE  SDL2.zig
src/: gravity.c  gravity.h  main.c  main.rs  main.zig  palette.rs  renderer.zig
