[package]
name = "nbody"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { version = "0.7", features = ["wayland", "dynamic"] }

macroquad = { git = "https://github.com/not-fl3/macroquad", branch = "master" }

# oorandom = "11.1.3"
# getrandom = "0.2.7"
# ggez = "0.8.0-rc0"